# navfusion

./: CMakeLists.txt  LICENSE  readme.md  requirements_venv.txt
data/phone_in_rest/: rest.csv  rest_stats.csv
data/tram/input/: tram.csv  tram_INDEX.txt
data/tram/yaw/: kml_fusion.kml  kml_gps.kml  kml_irs.kml  output.csv
libs/include/armadillo_bits/: config.hpp.cmake
src/: CMakeLists.txt  main.cpp
src/general/: general.h
src/interface/io/files/: io_files.cpp  io_files.h
src/interface/io/in/: io_in.cpp  io_in.h
src/interface/navdata/: interface_navdata.cpp  interface_navdata.h
src/interface/navdata/datatypes/: navdata_datatypes.h
src/interface/ui/: ui.cpp  ui.h
src/monitor/: monitor.cpp  monitor.h
src/processing/frames/: frames.cpp  frames.h
src/processing/kf/: proc_kf.cpp  proc_kf.h
src/processing/kf/datatypes/: proc_kf_datatypes.h
src/processing/system/: proc_system.cpp  proc_system.h  proc_system_helper.cpp  proc_system_helper.h
src/processing/system/fusion/: proc_system_fusion.cpp  proc_system_fusion.h
src/processing/system/gnss/: proc_system_gnss.cpp  proc_system_gnss.h
src/processing/system/ins/: proc_system_ins.cpp  proc_system_ins.h
tools/: analysis.py  helpers.py  inputstats.py  run.py
tools/third/: Note
